<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/name"
        android:layout_width="156dp"
        android:layout_height="67dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/noting"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:text="@string/gender"
        app:layout_constraintBaseline_toBaselineOf="@+id/gender"
        app:layout_constraintStart_toStartOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="1dp"
        android:text="@string/mail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/mail"
        android:layout_width="174dp"
        android:layout_height="73dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="1dp"
        android:text="@string/noting"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/bir" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:text="@string/bir"
        app:layout_constraintBaseline_toBaselineOf="@+id/bir"
        app:layout_constraintStart_toStartOf="@+id/textView8" />

    <TextView
        android:id="@+id/bir"
        android:layout_width="170dp"
        android:layout_height="75dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="72dp"
        android:text="@string/noting"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_marginStart="100dp"
        android:text="@string/name"
        app:layout_constraintBaseline_toBaselineOf="@+id/name"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:text="@string/phone"
        app:layout_constraintBaseline_toBaselineOf="@+id/phone"
        app:layout_constraintStart_toStartOf="@+id/textView10" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="72dp"
        android:text="@string/noting"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="170dp"
        android:layout_height="57dp"
        android:layout_marginStart="50dp"
        android:text="@string/noting"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/n"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="就讀學校"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/school"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/noting"
        app:layout_constraintStart_toEndOf="@+id/n"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

</androidx.constraintlayout.widget.ConstraintLayout>